--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       <div id="thrombo-info" class="medical-guidance"></div>
 
       <h4>🧠 Neurologic</h4>
-      <label><input type="checkbox"> Stroke (CVA)</label>
+      <label><input type="checkbox" id="stroke"> Stroke (CVA)</label>
+      <div id="stroke-info" class="medical-guidance"></div>
+            
       <label><input type="checkbox"> Seizure Disorder / Epilepsy</label>
       <label><input type="checkbox"> Migraine</label>
       <label><input type="checkbox"> Neurofibromatosis Type 1 (NF1)</label>
