--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
       <label><input type="checkbox" id="stroke"> Stroke (CVA)</label>
       <div id="stroke-info" class="medical-guidance"></div>
             
-      <label><input type="checkbox"> Seizure Disorder / Epilepsy</label>
+      <label><input type="checkbox" id="seizure"> Seizure Disorder / Epilepsy</label>
+      <div id="seizure-info" class="medical-guidance"></div>
+      
       <label><input type="checkbox"> Migraine</label>
       <label><input type="checkbox"> Neurofibromatosis Type 1 (NF1)</label>
       <label><input type="checkbox"> Multiple Sclerosis (MS)</label>
