--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       <label><input type="checkbox" id="seizure"> Seizure Disorder / Epilepsy</label>
       <div id="seizure-info" class="medical-guidance"></div>
       
-      <label><input type="checkbox"> Migraine</label>
+      <label><input type="checkbox" id="migraine"> Migraine</label>
+      <div id="migraine-info" class="medical-guidance"></div>
+      
       <label><input type="checkbox"> Neurofibromatosis Type 1 (NF1)</label>
       <label><input type="checkbox"> Multiple Sclerosis (MS)</label>
       <label><input type="checkbox"> Traumatic Brain Injury (TBI)</label>
