--- a/index.html
+++ b/index.html
@@ -141,9 +141,14 @@
       <div id="cataracts-info" class="medical-guidance"></div>      
 
       <h4>👂 ENT</h4>
-      <label><input type="checkbox"> Hearing Loss</label>
-      <label><input type="checkbox"> Vertigo / Meniere’s</label>
-      <label><input type="checkbox"> Chronic Sinusitis</label>
+      <label><input type="checkbox" id="hearing"> Hearing Loss</label>
+      <div id="hearing-info" class="medical-guidance"></div>
+      
+      <label><input type="checkbox" id="vertigo"> Vertigo / Meniere’s</label>
+      <div id="vertigo-info" class="medical-guidance"></div>
+      
+      <label><input type="checkbox" id="sinusitis"> Chronic Sinusitis</label>
+      <div id="sinusitis-info" class="medical-guidance"></div>      
 
       <h4>🫁 Pulmonary</h4>
       <label><input type="checkbox"> Asthma</label>
