--- a/index.html
+++ b/index.html
@@ -151,9 +151,14 @@
       <div id="sinusitis-info" class="medical-guidance"></div>      
 
       <h4>🫁 Pulmonary</h4>
-      <label><input type="checkbox"> Asthma</label>
-      <label><input type="checkbox"> COPD</label>
-      <label><input type="checkbox"> Sleep Apnea</label>
+      <label><input type="checkbox" id="asthma"> Asthma</label>
+      <div id="asthma-info" class="medical-guidance"></div>
+      
+      <label><input type="checkbox" id="copd"> COPD</label>
+      <div id="copd-info" class="medical-guidance"></div>
+      
+      <label><input type="checkbox" id="sleepapnea"> Sleep Apnea</label>
+      <div id="sleepapnea-info" class="medical-guidance"></div>      
 
       <h4>🧬 Hematologic / Immune</h4>
       <label><input type="checkbox"> Thrombocytopenia</label>
