--- a/index.html
+++ b/index.html
@@ -161,9 +161,14 @@
       <div id="sleepapnea-info" class="medical-guidance"></div>      
 
       <h4>🧬 Hematologic / Immune</h4>
-      <label><input type="checkbox"> Thrombocytopenia</label>
-      <label><input type="checkbox"> Anemia (significant)</label>
-      <label><input type="checkbox"> Lymphoma / Hodgkin’s Disease</label>
+      <label><input type="checkbox" id="thrombocytopenia"> Thrombocytopenia</label>
+      <div id="thrombocytopenia-info" class="medical-guidance"></div>
+      
+      <label><input type="checkbox" id="anemia"> Anemia (significant)</label>
+      <div id="anemia-info" class="medical-guidance"></div>
+      
+      <label><input type="checkbox" id="lymphoma"> Lymphoma / Hodgkin’s Disease</label>
+      <div id="lymphoma-info" class="medical-guidance"></div>      
 
       <h4>🧠 Oncologic / Cancer</h4>
       <label><input type="checkbox"> Bladder Cancer</label>
