update start page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
       <h3>Step 1: Choose Certificate</h3>
       <label for="pilotName">Full Name</label>
       <input type="text" id="pilotName" placeholder="e.g. John Doe">
+      <label for="certNumber">Certificate Number</label>
+      <input type="text" id="certNumber" placeholder="e.g. 123456789">            
       <label for="flightHours">Total Flight Hours</label>
       <input type="number" id="flightHours" placeholder="e.g. 1200">
+      <label for="medExpiry">Medical Expiration Date</label>
+      <input type="date" id="medExpiry">      
       <label for="certClass">Medical Certificate Class</label>
       <select id="certClass">
         <option value="1st">1st Class - Airline Transport Pilot</option>
