update start page title

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </nav>
   <main>
     <section id="start" class="active">
-      <h3>Step 1: Choose Certificate</h3>
+      <h3>Step 1: Pilot Details</h3>
       <label for="pilotName">Full Name</label>
       <input type="text" id="pilotName" placeholder="e.g. John Doe">
       <label for="certNumber">Certificate Number</label>
